@@ -1,3 +1,8 @@
+2010-04-30  Miguel Sofer  <msofer@users.sf.net>
+
+	* tests/coroutine.test: testing coroutine arguments after [yield]:
+	check that only 0/1 allowed
+
 2010-04-30  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclCompCmds.c (TclCompileVariableCmd): Slightly tighter
